RESOLVED FIXED285347
[css-animations] Fix serialization and parsing of `animation-name` strings
https://bugs.webkit.org/show_bug.cgi?id=285347
Summary [css-animations] Fix serialization and parsing of `animation-name` strings
Tim Nguyen (:ntim)
Reported 2025-01-03 09:15:57 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-03 09:16:10 PST
Tim Nguyen (:ntim)
Comment 2 2025-01-03 09:24:40 PST
Tim Nguyen (:ntim)
Comment 3 2025-01-03 09:25:41 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49906
EWS
Comment 4 2025-01-03 09:28:17 PST
Committed 288404@main (82d81077a049): <https://commits.webkit.org/288404@main> Reviewed commits have been landed. Closing PR #38484 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.