[css-animations] Fix serialization and parsing of `animation-name` strings https://bugs.webkit.org/show_bug.cgi?id=285347 rdar://142318879

Reviewed by Matthieu Dubet.

https://drafts.csswg.org/css-animations/#typedef-keyframes-name

`<string>` values should be parsed and serialized as identifiers unless there is ambiguity (in case of `none` or CSS-wide keywords).

`"none"` as a string should be treated as an keyframe name, not the `none` keyword.

These changes match the spec and Firefox's behavior.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/animation-name-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/animation-name-computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/animation-name-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/parsing/animation-name-valid.html:
Add more testcases.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/animation-name-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/animation-name.html:
Remove erroneous testcase that assumed strings were invalid (Chrome also fails it).

* Source/WebCore/css/parser/CSSPropertyParserConsumer+Animations.cpp:
(WebCore::CSSPropertyParserHelpers::consumeKeyframesName): Correctly handle string values and convert them to custom idents whenever possible.

Canonical link: https://commits.webkit.org/288404@main